1999-01-24  Yo Ric Dude  <ericmit@ix.netcom.com>

	* filter.c, players.c: fix filters to work with the translation
 	function pointers.

	* esdfilt.c: add some processing (double or halve the audio
 	signal) so we can tell if the filter is doing anything useful.

	* clients.c, esd-server.h, esdlib.c, players.c, stamp-h.in:
 	factored into a function the setsockopt calls for setting the
 	socket options for the socket buffer sizes in the court of king
 	caracticus, which was just passing by...

1999-01-24  bertrand <Bertrand.Guiheneuf@inria.fr>

	* configure.in (audiofile check): Fixed a small typo

1999-01-23  Yo Ric Dude  <ericmit@ix.netcom.com>

	* Makefile.am, esound.spec.in: updated web site, and added an rpm
	target to the makefile. "make rpm" and it should go do it's thing.

1999-01-14  Yo Ric Dude  <ericmit@ix.netcom.com>

	* players.c: fix the recorder_write and monitor_write function to
 	use translate function.
 	
	* clients.c: fixes to the pause vs. sleep issue. select()s forever
 	if nothing to do, i.e. not recording and no samples playing.
  	
	* esd-server.h, mix.c, esd.c, filter.c, proto.c: translate
 	function pointers sketched out.  added a mixer engine debug
 	switch. filters, recorders and monitors are most likely horribly
 	broken for now.
 	
	* README, TODO: cleanups, updates, typos

Thu Jan 14 22:52:02 PST 1999 Manish Singh <yosh@gimp.org>

	* esd.c: corrected -d help text

	* esdctl.c: 0 is a perfectly valid argument for volumes, so don't
	filter it out

	* esddsp.in: libdl isn't everywhere, don't specify it (libtool
	deps will take care of that)

	* Makefile.am
	* configure.in: check for libdl

	* acinclude.m4
	* ltconfig
	* ltmain.sh: libtool 1.2d for linux shared library deps

1999-01-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, esd.c, mix.c, players.c, samples.c: first take at
 	using function pointers for the mix functions.  probably breaks
 	filters, and who knows what else.  NOTE: work in progress, beware!
